--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,22 @@ body,
   min-height: 100vh;
   background-color: #f4f4f4;
 }
+
+.contentHeading {
+  width: 100%;
+  display: flex;
+  padding-bottom: 20px;
+  justify-content: space-between;
+}
+
+.editBtnBlock  {
+  display: flex;
+}
+
+.editBtn {
+  margin-left: 10px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
