--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,35 @@ body,
   cursor: pointer;
 }
 
+.mobileMenu {
+  position: fixed;
+  z-index: 150;
+  top: 0;
+  right: -300px;
+  transition: all .3s ease-in-out;
+  background: #FFF;
+  color: #000;
+  width: 200px;
+}
+
+.mobileMenu.selected {
+  right: 0;
+}
+
+.mobileMenu ul {
+  padding: 20px;
+}
+
+@media (min-width: 1200px) {
+  .mobileMenu {
+    display: none;
+  }
+
+  .mb {
+    width: 200px;
+    margin: 20px;
+    font-size: 20px;
+    font-weight: 600;
+  }
+}
+
