--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,22 @@ body,
   }
 }
 
+@media (max-width: 1024px) {
+  .profile-info {
+    position: absolute;
+    right: 20px;
+    width: 254px;
+    max-width: unset;
+  }
+
+  .profile-edit-button {
+    padding: 0.9rem;
+  }
+}
+
+@media (max-width: 490px) {
+  .mobileBlock {
+    display: block;
+  }
+}
+
