--- a/src/index.css
+++ b/src/index.css
@@ -187,6 +187,33 @@ body,
   margin-top: 24px;
 }
 
+.input-text-right, 
+.input-text-right input{
+  text-align: right;
+}
+
+.input-text-right select,
+select.input-text-right,
+select .input-text-right {
+  width: 200px;
+}
+
+input.input-text-right,
+input .input-text-right  {
+  border: 2px solid #7e7873;
+    border-radius: 4px;
+    padding: 4px;
+}
+
+.dialogHint {
+  color: #7e7873;
+  font-size: 14px;
+}
+
+h1 {
+  font-size: 36px;
+}
+
 @media (max-width: 1024px) {
   /* .profile-info {
     position: absolute;
