--- a/src/index.css
+++ b/src/index.css
@@ -246,3 +246,10 @@ h1 {
     margin-bottom: 8px;
   }
 }
+
+.versionText {
+  font-size: 8px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
